--- a/nginx.conf
+++ b/nginx.conf
@@ -8,21 +8,21 @@ http {
     # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
-        server_name *.technobar.by;
+        server_name technobar.by *.technobar.by;
         return 301 https://$host$request_uri;
     }
 
-    # Основной сервер для technobar.by
+    # Основной домен technobar.by
     server {
         listen 443 ssl;
         server_name technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Основная страница
         location / {
             proxy_pass http://nextjs;  # Прокси для всех путей на корневом домене
             proxy_http_version 1.1;
@@ -32,9 +32,9 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Обработка динамических страниц (например, /1phonefree)
-        location ~ ^/([a-zA-Z0-9-]+) {
-            proxy_pass http://nextjs/$1;  # Прокси для динамических страниц
+        # Дополнительные страницы
+        location ~ ^/(1phonefree|50discount|thank-you|[a-zA-Z0-9-]+)$ {
+            proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -42,6 +42,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
@@ -57,20 +58,19 @@ http {
         }
     }
 
-    # Прокси для поддоменов
+    # Поддомен phone.technobar.by
     server {
         listen 443 ssl;
-        server_name phone.technobar.by laptop1.technobar.by laptop2.technobar.by tv1.technobar.by tv2.technobar.by phone2.technobar.by phone2.technobar.by;
+        server_name phone.technobar.by;
 
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/phone.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.technobar.by/privkey.pem;
+
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Прокси для поддоменов
         location / {
-            # Прокси для поддоменов на разные пути в Next.js
-            proxy_pass http://nextjs/$host;  # $host заменяется на имя поддомена
+            proxy_pass http://nextjs/phone;  # Проксируем на /phone
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -78,6 +78,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
@@ -93,10 +94,77 @@ http {
         }
     }
 
-    # Прокси для всех поддоменов на HTTP, чтобы редиректить на HTTPS
+    # Поддомен laptop1.technobar.by
     server {
-        listen 80;
-        server_name *.technobar.by;
-        return 301 https://$host$request_uri;
+        listen 443 ssl;
+        server_name laptop1.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/laptop1.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/laptop1.technobar.by/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/laptop1;  # Проксируем на /laptop1
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
+
+    # Поддомен tv1.technobar.by
+    server {
+        listen 443 ssl;
+        server_name tv1.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/tv1.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tv1.technobar.by/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Добавьте аналогичные блоки для других поддоменов
 }
