--- a/nginx.conf
+++ b/nginx.conf
@@ -61,6 +61,40 @@ http {
     # Поддомен phone.technobar.by
     server {
         listen 443 ssl;
+        server_name phone2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/phone.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.technobar.by/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/phone2;  # Проксируем на /phone
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+        server {
+        listen 443 ssl;
         server_name phone.technobar.by;
 
         ssl_certificate /etc/letsencrypt/live/phone.technobar.by/fullchain.pem;
