add redirect thank-you

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ http {
         return 301 https://$host$request_uri;
     }
 
+      location /thank-you {
+        return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+    }
+
     # Основной домен technobar.by
     server {
         listen 443 ssl;
