--- a/nginx.conf
+++ b/nginx.conf
@@ -35,8 +35,8 @@ http {
         }
 
         # Дополнительные страницы
-        location ~ ^/(1phonefree|50discount|thank-you|[a-zA-Z0-9-]+)$ {
-            proxy_pass http://nextjs;
+        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
+            proxy_pass http://nextjs;  # Обрабатываем маршруты pk и другие
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -108,6 +108,10 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location /thank-you {
+            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        }
 
         location / {
             proxy_pass http://nextjs/phone;  # Проксируем на /phone
