--- a/nginx.conf
+++ b/nginx.conf
@@ -74,6 +74,9 @@ http {
         location /thank-you {
             return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
         }
+        location /pk {
+            return 301 https://technobar.by$uri$is_args$args
+        }
 
         location / {
             proxy_pass http://nextjs/phone2;  # Проксируем на /phone
