--- a/nginx.conf
+++ b/nginx.conf
@@ -35,7 +35,7 @@ http {
         }
 
         # Дополнительные страницы
-        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
+    location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
             proxy_pass http://nextjs;  # Обрабатываем маршруты pk и другие
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -74,8 +74,9 @@ http {
         location /thank-you {
             return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
         }
+
         location /pk {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
         }
 
         location / {
