--- a/nginx.conf
+++ b/nginx.conf
@@ -71,12 +71,16 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
-        }
+        # location /thank-you {
+        #     return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        # }
 
-        location /pk {
-            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        # location /pk {
+        #     return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        # }
+
+        location / {
+            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
         }
 
         location / {
@@ -113,8 +117,8 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        location / {
+            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
         }
 
         location / {
@@ -153,8 +157,8 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        location / {
+            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
         }
 
         location / {
@@ -194,8 +198,8 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
 
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
+        location / {
+            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
         }
 
         location / {
