--- a/nginx.conf
+++ b/nginx.conf
@@ -71,17 +71,22 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # location /thank-you {
-        #     return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
-        # }
-
-        # location /pk {
-        #     return 301 https://technobar.by$uri$is_args$args;  # Редирект на основной домен
-        # }
-
-        location / {
-            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
+        location /thank-you {
+            return 301 https://technobar.by$uri$is_args$args;  
         }
+        location /pk {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pass {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /po {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /guarantee{
+            return 301 https://technobar.by$uri$is_args$args
+        }
+
 
         location / {
             proxy_pass http://nextjs/phone2;  # Проксируем на /phone
@@ -117,8 +122,20 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location / {
-            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
+        location /thank-you {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pk {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pass {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /po {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /guarantee{
+            return 301 https://technobar.by$uri$is_args$args
         }
 
         location / {
@@ -157,8 +174,20 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location / {
-            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
+        location /thank-you {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pk {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pass {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /po {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /guarantee{
+            return 301 https://technobar.by$uri$is_args$args
         }
 
         location / {
@@ -198,8 +227,20 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
 
-        location / {
-            return 301 https://technobar.by$request_uri;  # Редирект всех маршрутов на основной домен
+        location /thank-you {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pk {
+            return 301 https://technobar.by$uri$is_args$args;  
+        }
+        location /pass {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /po {
+            return 301 https://technobar.by$uri$is_args$args
+        }
+        location /guarantee{
+            return 301 https://technobar.by$uri$is_args$args
         }
 
         location / {
