--- a/nginx.conf
+++ b/nginx.conf
@@ -77,13 +77,13 @@ http {
             return 301 https://technobar.by$uri$is_args$args;  
         }
         location /pass {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /po {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /guarantee{
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
 
 
@@ -128,13 +128,13 @@ http {
             return 301 https://technobar.by$uri$is_args$args;  
         }
         location /pass {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /po {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /guarantee{
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
 
         location / {
@@ -179,13 +179,13 @@ http {
             return 301 https://technobar.by$uri$is_args$args;  
         }
         location /pass {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /po {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /guarantee{
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
 
         location / {
@@ -231,13 +231,13 @@ http {
             return 301 https://technobar.by$uri$is_args$args;  
         }
         location /pass {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /po {
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
         location /guarantee{
-            return 301 https://technobar.by$uri$is_args$args
+            return 301 https://technobar.by$uri$is_args$args;
         }
 
         location / {
