--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,12 @@
 events {}
 
 http {
+
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+    add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+    add_header Access-Control-Allow-Credentials true;
+    
     upstream nextjs {
         server nextjs-app:3000;
     }
