add edit config nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 events {}
 
 http {
-
+    # Общие CORS заголовки
     add_header Access-Control-Allow-Origin *;
     add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
     add_header Access-Control-Allow-Headers "Content-Type, Authorization";
     add_header Access-Control-Allow-Credentials true;
-    
+
     upstream nextjs {
         server nextjs-app:3000;
     }
@@ -17,8 +17,6 @@ http {
         server_name technobar.by *.technobar.by;
         return 301 https://$host$request_uri;
     }
-
-    
 
     # Основной домен technobar.by
     server {
@@ -32,7 +30,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  # Прокси для всех путей на корневом домене
+            proxy_pass http://nextjs;  # Проксируем на корневой домен
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -42,7 +40,7 @@ http {
 
         # Дополнительные страницы
         location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
-            proxy_pass http://nextjs;  # Обрабатываем маршруты pk и другие
+            proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -65,58 +63,8 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
+
     # Поддомен phone.technobar.by
-    server {
-        listen 443 ssl;
-        server_name phone2.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/phone2.technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/phone2.technobar.by/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pk {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pass {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /po {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /guarantee{
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
-
-        location / {
-            proxy_pass http://nextjs/phone2;  # Проксируем на /phone
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
     server {
         listen 443 ssl;
         server_name phone.technobar.by;
@@ -127,19 +75,7 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pk {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pass {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /po {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /guarantee{
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
 
@@ -167,6 +103,47 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
+
+    # Поддомен phone2.technobar.by
+    server {
+        listen 443 ssl;
+        server_name phone2.technobar.by;
+
+        ssl_certificate /etc/letsencrypt/live/phone2.technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone2.technobar.by/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://technobar.by$uri$is_args$args;
+        }
+
+        location / {
+            proxy_pass http://nextjs/phone2;  # Проксируем на /phone2
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
     # Поддомен laptop1.technobar.by
     server {
         listen 443 ssl;
@@ -178,19 +155,7 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pk {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pass {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /po {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /guarantee{
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
 
@@ -218,6 +183,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
+
     # Поддомен tv1.technobar.by
     server {
         listen 443 ssl;
@@ -229,20 +195,7 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-
-        location /thank-you {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pk {
-            return 301 https://technobar.by$uri$is_args$args;  
-        }
-        location /pass {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /po {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-        location /guarantee{
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
 
@@ -270,5 +223,4 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
-    # Добавьте аналогичные блоки для других поддоменов
 }
