--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,10 @@ http {
         server_name technobar.by *.technobar.by;
         return 301 https://$host$request_uri;
     }
+    set $cors_allowed "false";
+    if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
+        set $cors_allowed "true";
+    }
 
     # Основной домен technobar.by
     server {
@@ -29,6 +33,8 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
 
         location / {
             proxy_pass http://nextjs;  
@@ -38,8 +44,15 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
+             if ($cors) {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+            }
+
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
@@ -47,8 +60,7 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            
         }
 
         # Дополнительные страницы
@@ -59,6 +71,17 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            if ($cors_allowed = "true") {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+            }
+
+            location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+                return 301 https://technobar.by$uri$is_args$args;
+            }
         }
 
         # Next.js статические файлы
@@ -88,6 +111,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+
         location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
@@ -100,8 +126,16 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
+            if ($cors) {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+            }
+
+            # Для OPTIONS запросов
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
@@ -109,9 +143,6 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
         }
 
         # Next.js статические файлы
@@ -141,6 +172,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+
         location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
@@ -153,8 +187,16 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
+            if ($cors) {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+            }
+
+            # Для OPTIONS запросов
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
@@ -162,9 +204,6 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
         }
 
         # Next.js статические файлы
@@ -194,6 +233,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+
         location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
@@ -206,8 +248,16 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
+            if ($cors) {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+            }
+
+            # Для OPTIONS запросов
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
@@ -215,9 +265,6 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-            
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
         }
 
         # Next.js статические файлы
@@ -247,6 +294,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+
         location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://technobar.by$uri$is_args$args;
         }
@@ -259,8 +309,16 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
+           if ($cors) {
+                add_header Access-Control-Allow-Origin $http_origin always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+            }
+
+            # Для OPTIONS запросов
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
@@ -268,9 +326,6 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-            
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
         }
 
         # Next.js статические файлы
