--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,8 @@ http {
         default "";
         ~^https?://(.*\.technobar\.by|technobar\.by)$ $http_origin;
     }
-    set $cors_allowed "false";
-    
+   
+
     upstream nextjs {
         server nextjs-app:3000;
     }
@@ -18,9 +18,6 @@ http {
         listen 80;
         server_name technobar.by *.technobar.by;
         return 301 https://$host$request_uri;
-    }
-    if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
-        set $cors_allowed "true";
     }
 
     # Основной домен technobar.by
@@ -37,6 +34,12 @@ http {
 
 
         location / {
+            set $cors_allowed "false";
+
+            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
+                set $cors_allowed "true";
+            }
+
             proxy_pass http://nextjs;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -44,7 +47,7 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-             if ($cors) {
+            if ($cors_allowed = "true") {
                 add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
@@ -119,6 +122,12 @@ http {
         }
 
         location / {
+            set $cors_allowed "false";
+
+            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
+                set $cors_allowed "true";
+            }
+
             proxy_pass http://nextjs/phone;  # Проксируем на /phone
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -126,7 +135,7 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors) {
+            if ($cors_allowed = "true") {
                 add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
@@ -180,6 +189,11 @@ http {
         }
 
         location / {
+            set $cors_allowed "false";
+
+            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
+                set $cors_allowed "true";
+            }
             proxy_pass http://nextjs/phone2;  # Проксируем на /phone2
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -187,7 +201,7 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors) {
+            if ($cors_allowed = "true") {
                 add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
@@ -241,6 +255,11 @@ http {
         }
 
         location / {
+            set $cors_allowed "false";
+
+            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
+                set $cors_allowed "true";
+            }
             proxy_pass http://nextjs/laptop1;  # Проксируем на /laptop1
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -248,7 +267,7 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors) {
+            if ($cors_allowed = "true") {
                 add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
@@ -302,6 +321,11 @@ http {
         }
 
         location / {
+            set $cors_allowed "false";
+
+            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
+                set $cors_allowed "true";
+            }
             proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -309,7 +333,7 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-           if ($cors) {
+           if ($cors_allowed = "true") {
                 add_header Access-Control-Allow-Origin $http_origin always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
