--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,17 @@
 events {}
 
 http {
-    # Общие CORS заголовки
-
+    # CORS для всех доменов technobar.by
     map $http_origin $cors {
         default "";
         ~^https?://(.*\.technobar\.by|technobar\.by)$ $http_origin;
     }
-   
 
     upstream nextjs {
         server nextjs-app:3000;
     }
 
-    # Редирект HTTP -> HTTPS для всех доменов
+    # Редирект HTTP -> HTTPS
     server {
         listen 80;
         server_name technobar.by *.technobar.by;
@@ -32,42 +30,8 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-
+        # Главная страница
         location / {
-            set $cors_allowed "false";
-
-            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
-                set $cors_allowed "true";
-            }
-
-            proxy_pass http://nextjs;  
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($cors_allowed = "true") {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-            }
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            
-        }
-
-        # Дополнительные страницы
-        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -75,31 +39,30 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors_allowed = "true") {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-            }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+            add_header Access-Control-Allow-Credentials "true" always;
 
-            location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-                return 301 https://technobar.by$uri$is_args$args;
+            if ($request_method = OPTIONS) {
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
             }
+        }
+
+        # Редиректы для статических страниц
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://technobar.by$uri$is_args$args;
         }
 
         # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 
@@ -113,60 +76,26 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
         location / {
-            set $cors_allowed "false";
-
-            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
-                set $cors_allowed "true";
-            }
-
-            proxy_pass http://nextjs/phone;  # Проксируем на /phone
+            proxy_pass http://nextjs/phone;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors_allowed = "true") {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-            }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+            add_header Access-Control-Allow-Credentials "true" always;
 
-            # Для OPTIONS запросов
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
+            if ($request_method = OPTIONS) {
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 
@@ -180,63 +109,30 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
         location / {
-            set $cors_allowed "false";
-
-            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
-                set $cors_allowed "true";
-            }
-            proxy_pass http://nextjs/phone2;  # Проксируем на /phone2
+            proxy_pass http://nextjs/phone2;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors_allowed = "true") {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-            }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+            add_header Access-Control-Allow-Credentials "true" always;
 
-            # Для OPTIONS запросов
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
+            if ($request_method = OPTIONS) {
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
         }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
     }
 
-    # Поддомен laptop1.technobar.by
+    # Пример поддомена laptop1.technobar.by
     server {
         listen 443 ssl;
         server_name laptop1.technobar.by;
@@ -246,125 +142,26 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
         location / {
-            set $cors_allowed "false";
-
-            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
-                set $cors_allowed "true";
-            }
-            proxy_pass http://nextjs/laptop1;  # Проксируем на /laptop1
+            proxy_pass http://nextjs/laptop1;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            if ($cors_allowed = "true") {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-            }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+            add_header Access-Control-Allow-Credentials "true" always;
 
-            # Для OPTIONS запросов
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
+            if ($request_method = OPTIONS) {
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Поддомен tv1.technobar.by
-    server {
-        listen 443 ssl;
-        server_name tv1.technobar.by;
-
-        ssl_certificate /etc/letsencrypt/live/tv1.technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tv1.technobar.by/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://technobar.by$uri$is_args$args;
-        }
-
-        location / {
-            set $cors_allowed "false";
-
-            if ($http_origin ~* ^https?://(.*\.technobar\.by|technobar\.by)$) {
-                set $cors_allowed "true";
-            }
-            proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-           if ($cors_allowed = "true") {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-            }
-
-            # Для OPTIONS запросов
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $http_origin always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 }
